--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
+*{
+  margin: 0 auto;
+}
+
 body{
   max-width: 425px;
-  height: 100%;
   margin: 0 auto;
   font-family: Poppins;
   text-align: center;
@@ -8,9 +11,5 @@ body{
 
 .App{
   background-color: wheat;
-  height: 900px; 
 }
 
-.App p{
-  margin: 0;
-}
