--- a/src/App.css
+++ b/src/App.css
@@ -11,5 +11,71 @@ body{
 
 .App{
   background-color: wheat;
+  max-width: 425px;
+  margin: 0 auto;
+  position: relative;
 }
 
+#mySidenav{
+  display: block;
+  position: absolute;
+}
+
+.sidenav {
+  height: 70vh;
+  width: 100%;
+  position: fixed;
+  z-index: 6;
+  top: -950px;
+  background-color: #febe00;
+  padding-top: 60px;
+  text-align: center;
+  transition: top 0.5s ease;
+}
+
+/* Sidenav menu links */
+.sidenav a {
+  padding: 8px 8px 20px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: white;
+  text-transform: uppercase;
+  font-weight: bold;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+/* Active class */
+.sidenav.active {
+  top: 0;
+}
+
+/* Close btn */
+.sidenav .close {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+}
+
+/* Icône burger */
+
+#openBtn{
+  position: absolute;
+  left: 10px;
+  z-index: 1;
+}
+
+.burger-icon span {
+  display: block;
+  width: 35px;
+  height: 5px;
+  background-color: white;
+  margin: 6px 0;
+}
