--- a/src/Article/Article.css
+++ b/src/Article/Article.css
@@ -5,32 +5,75 @@ h1{
     text-align: left;
 }
 
-.img-container{
-    width:100vw;
-    overflow: hidden;
-    object-fit: fill;
-    transition: 0.5s;
+.page-1{
+   
+    position: relative;
+    top:0;
+}
+
+.page-2, .page-3{
+    width: 80vw;
+    top:12rem;
+    transition: 1s ease;
+}
+
+
+.shown-page{
+    position: relative;
+    opacity: 100%;
+    transition: 1s ease;
+    
+   
+}
+
+.next-page{
+    position:relative;
+    bottom:0;
+    opacity: 0%;
+    height: 0px;
+    transition: 1s ease;
+    
     
 }
 
+.previous-page{
+    position:relative;
+    top:-100px;
+    height: 0;
+    opacity: 0%;
+    transition: 1s ease;
+   
+    
+}
+
+.img-container{
+    width:fit-content;
+    justify-content: center;
+    margin-left: -10vw;
+    margin-top:3rem;
+    object-fit: fill;
+    z-index: 1;
+    overflow: hidden;
+}
+
 .scrolled-down{
-    width:100vw;
+    margin: 0;
     height:20vh;
     overflow: hidden;
     object-fit: fill;
     position: fixed;
     top:0;
-    transition: 0.5s;
+   
 }
 
 .illustration{
-    max-width: 100%;
+    max-width: 100vw;
     object-fit:cover;
 }
 
 .article-content{
     width:80%;
-    margin:auto;
+    position: relative;
 }
 
 .extract{
@@ -50,7 +93,8 @@ h1{
     align-items: center;
 }
 
-.main-article{
-    position: absolute;
-    top:100vh;
+
+
+.buttonDown:hover{
+    cursor: pointer;
 }
