--- a/src/Article/Article.css
+++ b/src/Article/Article.css
@@ -49,11 +49,15 @@ h1{
 .img-container{
     width:fit-content;
     justify-content: center;
-    margin-left: -10vw;
+    margin-left: -12.5%;
     margin-top:3rem;
     object-fit: fill;
     z-index: 1;
     overflow: hidden;
+    position: relative;
+    max-width: 425px;
+    max-height: 425px;;
+
 }
 
 .scrolled-down{
@@ -69,9 +73,10 @@ h1{
 .illustration{
     max-width: 100vw;
     object-fit:cover;
+
 }
 
-.article-content{
+.article-content, .article-content-prev, .article-content-next{
     width:80%;
     position: relative;
 }
@@ -97,4 +102,26 @@ h1{
 
 .buttonDown:hover{
     cursor: pointer;
+}
+
+.article-content-prev, .article-content-next{
+    opacity:0%;
+    top:0;
+    width: 0;
+    overflow: hidden;
+}
+
+.article-content-prev{
+    left:0;
+
+}
+
+.article-content-next{
+    right:0;
+}
+
+.button-next,.button-prev{
+    position:fixed;
+    top:50%;
+    z-index: 50;
 }
