--- a/src/Article/Article.css
+++ b/src/Article/Article.css
@@ -21,6 +21,8 @@ h1{
 .shown-page{
     position: relative;
     opacity: 100%;
+    height: 100%;
+    top:0;
     transition: 1s ease;
     
    
@@ -28,20 +30,24 @@ h1{
 
 .next-page{
     position:relative;
-    bottom:0;
+    bottom:1000px;
     opacity: 0%;
-    height: 0px;
+    height: 0;
     transition: 1s ease;
+    z-index: -5;
+    overflow: hidden;
     
     
 }
 
 .previous-page{
     position:relative;
-    top:-100px;
+    top:1000px;
     height: 0;
     opacity: 0%;
     transition: 1s ease;
+    z-index: -5;
+    overflow: hidden;
    
     
 }
@@ -104,21 +110,6 @@ h1{
     cursor: pointer;
 }
 
-.article-content-prev, .article-content-next{
-    opacity:0%;
-    top:0;
-    width: 0;
-    overflow: hidden;
-}
-
-.article-content-prev{
-    left:0;
-
-}
-
-.article-content-next{
-    right:0;
-}
 
 .button-next,.button-prev{
     position:fixed;
