somewhat fixed articles

--- a/src/Article/Article.css
+++ b/src/Article/Article.css
@@ -19,9 +19,9 @@ h1{
 
 
 .shown-page{
+    display: block;
     position: relative;
     opacity: 100%;
-    height: 100%;
     top:0;
     transition: 1s ease;
     
@@ -42,15 +42,16 @@ h1{
 
 .previous-page{
     position:relative;
-    top:1000px;
+    top:-1000px;
     height: 0;
     opacity: 0%;
     transition: 1s ease;
     z-index: -5;
-    overflow: hidden;
+
    
     
 }
+
 
 .img-container{
     width:fit-content;
@@ -82,7 +83,7 @@ h1{
 
 }
 
-.article-content, .article-content-prev, .article-content-next{
+.article-content{
     width:80%;
     position: relative;
 }
@@ -115,4 +116,11 @@ h1{
     position:fixed;
     top:50%;
     z-index: 50;
+}
+
+.like{
+    position: absolute;
+    right:0;
+    margin-right:1rem;
+    margin-top:0.5rem;
 }
