--- a/src/App.css
+++ b/src/App.css
@@ -53,12 +53,25 @@ body{
 
 #login_reg{
   display: flex;
-  position: absolute;
-  justify-content: space-between;
-  width: 100%;
   font-size: larger;
-  top:90%;
-  left: 40px;
+  justify-content: center;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 12px;
+}
+
+#login_reg a{
+  display: block;
+  margin: 2em;
+}
+
+#greet p{
+  font-size: x-large;
+}
+
+.options p{
+  font-size: large;
 }
 
 .sidenav a {
@@ -81,7 +94,7 @@ body{
 .top-menu a{
   margin: 0 auto;
   cursor: pointer;
-  font-size: 1.5em;
+  font-size: 1em;
   text-align: left;
   padding: 0;
 }
@@ -94,6 +107,7 @@ body{
   list-style-type: none;
   padding: 0;
   margin: 2em;
+  margin-top: 5em;
 }
 
 .sidenav ul li{
