--- a/src/Article/Article.css
+++ b/src/Article/Article.css
@@ -3,6 +3,7 @@
     font-weight: 900;
     width:100%;
     text-align: left;
+    color:white;
 }
 
 .page-1{
@@ -22,6 +23,7 @@
     display: block;
     position: relative;
     opacity: 100%;
+
     transition: 1s ease;
     
    
