--- a/src/App.css
+++ b/src/App.css
@@ -5,16 +5,21 @@
 body{
   max-width: 425px;
   margin: 0 auto;
-
   font-family: Poppins;
   text-align: center;
+}
+
+html{
+  height: 100%;
+  min-height: 100vh;
 }
 
 .App{
   background-color: #6c64f7;
   max-width: 425px;
   margin: 0 auto;
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   position: relative;
 }
@@ -22,6 +27,7 @@ body{
 #mySidenav{
   display: block;
   position: absolute;
+  height: 100vh;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
